--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,117 +7,115 @@
     <link rel="stylesheet" href="../static/style_home.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="home_button">
-        <a href="/home">
-          <button>
-            <img class="icon" src="../static/asset/home_button.png" />
-            <img
-              class="icon-hover"
-              src="../static/asset/home_button_hover.png"
-            />
-          </button>
-        </a>
-      </div>
-      <div class="setting_button">
-        <button id="modal-btn">
-          <img
-            class="icon"
-            src="../static/asset/setting_button.png"
-            alt="Setting"
-          />
-          <img
-            class="icon-hover"
-            src="../static/asset/setting_button_hover.png"
-            alt="Setting Hover"
-          />
-        </button>
-      </div>
-
-      <!-- Modal or Popup -->
-      <div id="myModal" class="modal">
-        <div class="modal-content">
-          <!-- Close button for the modal -->
-          <span class="close">&times;</span>
-          <!-- Modal content goes here -->
-          <h2>Settings</h2>
-          <p>
-            This is the content of the modal. It can cover most of the screen.
-          </p>
+    <div class="wrapper">
+      <nav class="navbar">
+        <div class="home_button">
+          <a href="/home">
+            <button>
+              <img class="icon" src="../static/asset/home_button.png" />
+              <img
+                class="icon-hover"
+                src="../static/asset/home_button_hover.png"
+              />
+            </button>
+          </a>
         </div>
-      </div>
-
-      <div class="profile_button">
-        <button>
-          <img
-            class="icon"
-            src="../static/asset/profile_button.png"
-            alt="Profile"
-          />
-          <img
-            class="icon-hover"
-            src="../static/asset/profile_button_hover.png"
-            alt="Profile Hover"
-          />
-        </button>
-        <div class="dropdown-content">
-          <a href="/profile">Profile</a>
-          <a href="/logout">Logout</a>
+        <div class="setting_button">
+          <button id="modal-btn">
+            <img
+              class="icon"
+              src="../static/asset/setting_button.png"
+              alt="Setting"
+            />
+            <img
+              class="icon-hover"
+              src="../static/asset/setting_button_hover.png"
+              alt="Setting Hover"
+            />
+          </button>
         </div>
-      </div>
 
-      <div class="userinfo">
-        {% if username %}
-        <p>Logged in as: {{ username }}!</p>
-        {% else %}
-        <p>Playing as: guest!</p>
-        {% endif %}
-      </div>
-    </nav>
+        <!-- Modal or Popup -->
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <!-- Close button for the modal -->
+            <span class="close">&times;</span>
+            <!-- Modal content goes here -->
+            <h2>Settings</h2>
+            <p>
+              This is the content of the modal. It can cover most of the screen.
+            </p>
+          </div>
+        </div>
 
-    <div class="content">
-      <h1 class="intro">Carleton Campus Map</h1>
-
-      <img
-        id="mapimage"
-        src="../static/asset/FrontPage1.png"
-        usemap="#clickmap"
-      />
-
-      <div class="sayles_button">
-        <a href="/sayles">
+        <div class="profile_button">
           <button>
-            <img class="icon" src="../static/asset/location_button.png" />
+            <img
+              class="icon"
+              src="../static/asset/profile_button.png"
+              alt="Profile"
+            />
             <img
               class="icon-hover"
-              src="../static/asset/location_button_hover.png"
+              src="../static/asset/profile_button_hover.png"
+              alt="Profile Hover"
             />
           </button>
-        </a>
-      </div>
+          <div class="dropdown-content">
+            <a href="/profile">Profile</a>
+            <a href="/logout">Logout</a>
+          </div>
+        </div>
 
-      <div class="library_button">
-        <a href="/library">
-          <button>
-            <img class="icon" src="../static/asset/location_button.png" />
-            <img
-              class="icon-hover"
-              src="../static/asset/location_button_hover.png"
-            />
-          </button>
-        </a>
-      </div>
+        <div class="userinfo">
+          {% if username %}
+          <p>Logged in as: {{ username }}!</p>
+          {% else %}
+          <p>Playing as: guest!</p>
+          {% endif %}
+        </div>
+      </nav>
 
-      <div class="baldspot_button">
-        <a href="/baldspot">
-          <button>
-            <img class="icon" src="../static/asset/location_button.png" />
-            <img
-              class="icon-hover"
-              src="../static/asset/location_button_hover.png"
-            />
-          </button>
-        </a>
+      <div class="content">
+        <h1 class="intro">Carleton Campus Map</h1>
+
+        <img id="image" src="../static/asset/FrontPage1.png" />
+
+        <div class="sayles_button">
+          <a href="/sayles">
+            <button>
+              <img class="icon" src="../static/asset/location_button.png" />
+              <img
+                class="icon-hover"
+                src="../static/asset/location_button_hover.png"
+              />
+            </button>
+          </a>
+        </div>
+
+        <div class="library_button">
+          <a href="/library">
+            <button>
+              <img class="icon" src="../static/asset/location_button.png" />
+              <img
+                class="icon-hover"
+                src="../static/asset/location_button_hover.png"
+              />
+            </button>
+          </a>
+        </div>
+
+        <div class="baldspot_button">
+          <a href="/baldspot">
+            <button>
+              <img class="icon" src="../static/asset/location_button.png" />
+              <img
+                class="icon-hover"
+                src="../static/asset/location_button_hover.png"
+              />
+            </button>
+          </a>
+        </div>
       </div>
     </div>
 
