--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -85,6 +85,6 @@
       <button class="big-button" onclick="leaveRoom();">LEAVE ROOM</button>
     </p>
 
-    <script src="../static/js/settings.js"></script>
+    <script src="../static/settings.js"></script>
   </body>
 </html>
