move to js folder

--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
-    <script src="/static/chatroom.js"></script>
+    <script src="/static/js/chatroom.js"></script>
   </head>
   <body onload="initializeNumbers();">
     <div class="topbar">
