--- a/app/templates/baldspot.html
+++ b/app/templates/baldspot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carl Chat Main</title>
     <link rel="stylesheet" href="../static/style.css" />
-    <script src="/static/baldspot.js"></script>
+    <script src="/static/js/baldspot.js"></script>
   </head>
   <body>
     <div class="topbar">
