--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -3,88 +3,108 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carl Chat Main</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
-    />
-    <script src="/static/js/chatroom.js"></script>
+    <title>Carl Chat Posting</title>
+    <link rel="stylesheet" href="../static/style_chatroom.css" />
+    <script src="../static/js/chatroom.js"></script>
   </head>
   <body onload="initializeNumbers();">
-    <div class="topbar">
-      <div class="homebutton">
-        <p>
+    <div class="wrapper">
+      <nav class="navbar">
+        <div class="home_button">
           <a href="/home">
             <button>
+              <img class="icon" src="../static/asset/home_button.png" />
               <img
-                src="{{ url_for('static', filename='asset/houseicon.jpg') }}"
-                id="homeicon"
+                class="icon-hover"
+                src="../static/asset/home_button_hover.png"
               />
             </button>
           </a>
-        </p>
-      </div>
-
-      <div class="logoutbutton">
-        <p>
-          <a href="/logout">
-            <button>
-              <img
-                src="{{ url_for('static', filename='asset/logouticon.jpg') }}"
-                id="logouticon"
-              />
-            </button>
-          </a>
-        </p>
-      </div>
-    </div>
-
-    <div class="lowerbar">
-      <div class="dropdown">
-        <button id="settings">Settings</button>
-        <div class="dropdown-content">
-          <a href="/aboutpage">About Page</a>
-          <a href="/aboutus">About Us</a>
-          <a href="/contact">Contact Us</a>
-          <a href="/logout">Logout</a>
         </div>
-      </div>
-      <div class="userinfo">
-        {% if username %}
-        <p>Logged in as: {{ username }}!</p>
-        {% else %}
-        <p>Playing as: guest!</p>
-        {% endif %}
+        <div class="setting_button">
+          <button id="modal-btn">
+            <img
+              class="icon"
+              src="../static/asset/setting_button.png"
+              alt="Setting"
+            />
+            <img
+              class="icon-hover"
+              src="../static/asset/setting_button_hover.png"
+              alt="Setting Hover"
+            />
+          </button>
+        </div>
+
+        <!-- Modal or Popup -->
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <!-- Close button for the modal -->
+            <span class="close">&times;</span>
+            <!-- Modal content goes here -->
+            <h2>Settings</h2>
+            <p>
+              This is the content of the modal. It can cover most of the screen.
+            </p>
+          </div>
+        </div>
+
+        <div class="profile_button">
+          <button>
+            <img
+              class="icon"
+              src="../static/asset/profile_button.png"
+              alt="Profile"
+            />
+            <img
+              class="icon-hover"
+              src="../static/asset/profile_button_hover.png"
+              alt="Profile Hover"
+            />
+          </button>
+          <div class="dropdown-content">
+            <a href="/profile">Profile</a>
+            <a href="/logout">Logout</a>
+          </div>
+        </div>
+
+        <div class="userinfo">
+          {% if username %}
+          <p>Logged in as: {{ username }}!</p>
+          {% else %}
+          <p>Playing as: guest!</p>
+          {% endif %}
+        </div>
+      </nav>
+
+      <div class="content">
+        <div id="chatroom">
+          <h1>Chatroom</h1>
+          <div id="chat"></div>
+          <input
+            type="text"
+            id="message_input"
+            placeholder="Type your message..."
+          />
+          <button onclick="sendMessage()">Send</button>
+        </div>
+
+        <p class="heading-class">Welcome to Room # <b id="roomNumber">?</b></p>
+
+        <p class="center-big">
+          <b class="red" id="text0" style="display: block"> ? </b>
+          <b class="red" id="text1" style="display: block"> ? </b>
+          <b class="red" id="text2" style="display: block"> ? </b>
+          <b class="red" id="text3" style="display: block"> ? </b>
+          <b class="red" id="text4" style="display: block"> ? </b>
+        </p>
+
+        <p class="center-med">Players: <b id="playerNames">No One Here</b></p>
+
+        <p class="center-med">
+          <button class="big-button" onclick="leaveRoom();">LEAVE ROOM</button>
+        </p>
       </div>
     </div>
-
-    <div id="chatroom">
-      <h1>Chatroom</h1>
-      <div id="chat"></div>
-      <input
-        type="text"
-        id="message_input"
-        placeholder="Type your message..."
-      />
-      <button onclick="sendMessage()">Send</button>
-    </div>
-
-    <p class="heading-class">Welcome to Room # <b id="roomNumber">?</b></p>
-
-    <p class="center-big">
-      <b class="red" id="text0" style="display: block"> ? </b>
-      <b class="red" id="text1" style="display: block"> ? </b>
-      <b class="red" id="text2" style="display: block"> ? </b>
-      <b class="red" id="text3" style="display: block"> ? </b>
-      <b class="red" id="text4" style="display: block"> ? </b>
-    </p>
-
-    <p class="center-med">Players: <b id="playerNames">No One Here</b></p>
-
-    <p class="center-med">
-      <button class="big-button" onclick="leaveRoom();">LEAVE ROOM</button>
-    </p>
-
-    <script src="../static/settings.js"></script>
   </body>
 </html>
