--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,7 +11,7 @@
       <div class="content">
         <h2>Login</h2>
         <div class="circle-image">
-          <img src="../static/asset/login.gif" />
+          <img src="../static/asset/CarlsLogo.png" />
         </div>
 
         {% if error %}
