--- a/app/templates/sayles.html
+++ b/app/templates/sayles.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -78,9 +77,9 @@
       </nav>
       <div class="content">
         <h1 class="intro">Sayles</h1>
-
-        <img id="image" src="../static/asset/Sayles_cafe.gif" />
+        <h2>Choose your favorite menu and go chat!</h2>
         <img id="menu_image" src="../static/asset/Sayles_menu.png" />
+        <img id="image" src="../static/asset/Sayles_cafe.gif" />
       </div>
     </div>
     <script src="../static/js/modal.js"></script>
