--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -1,94 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="../static/style_home.css">
-    <link rel="stylesheet" href="../static/music.css">
-    <style>
-      
-    </style>
-</head>
-<body>
-<nav class="navbar">
-    <div class="home_button">
+    <link rel="stylesheet" href="../static/style_library.css" />
+    <link rel="stylesheet" href="../static/music.css" />
+    <style></style>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="home_button">
         <a href="/home">
-            <button>
-                <img class="icon" src="../static/asset/home_button.png" />
-                <img
-                    class="icon-hover"
-                    src="../static/asset/home_button_hover.png"
-                />
-            </button>
+          <button>
+            <img class="icon" src="../static/asset/home_button.png" />
+            <img
+              class="icon-hover"
+              src="../static/asset/home_button_hover.png"
+            />
+          </button>
         </a>
-    </div>
-    <div class="setting_button">
-        <button id="setting-btn">
-            <img
-                class="icon"
-                src="../static/asset/setting_button.png"
-                alt="Setting"
-            />
-            <img
-                class="icon-hover"
-                src="../static/asset/setting_button_hover.png"
-                alt="Setting Hover"
-            />
+      </div>
+      <div class="setting_button">
+        <button id="modal-btn">
+          <img
+            class="icon"
+            src="../static/asset/setting_button.png"
+            alt="Setting"
+          />
+          <img
+            class="icon-hover"
+            src="../static/asset/setting_button_hover.png"
+            alt="Setting Hover"
+          />
         </button>
-    </div>
+      </div>
 
-    <div class="profile_button">
+      <!-- Modal or Popup -->
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <!-- Close button for the modal -->
+          <span class="close">&times;</span>
+          <!-- Modal content goes here -->
+          <h2>Settings</h2>
+          <p>
+            This is the content of the modal. It can cover most of the screen.
+          </p>
+        </div>
+      </div>
+
+      <div class="profile_button">
         <button>
-            <img
-                class="icon"
-                src="../static/asset/profile_button.png"
-                alt="Profile"
-            />
-            <img
-                class="icon-hover"
-                src="../static/asset/profile_button_hover.png"
-                alt="Profile Hover"
-            />
+          <img
+            class="icon"
+            src="../static/asset/profile_button.png"
+            alt="Profile"
+          />
+          <img
+            class="icon-hover"
+            src="../static/asset/profile_button_hover.png"
+            alt="Profile Hover"
+          />
         </button>
         <div class="dropdown-content">
-            <a href="/profile">Profile</a>
-            <a href="/logout">Logout</a>
+          <a href="/profile">Profile</a>
+          <a href="/logout">Logout</a>
         </div>
-    </div>
-
-    <div class="userinfo">
+      </div>
+      <div class="userinfo">
         {% if username %}
         <p>Logged in as: {{ username }}!</p>
         {% else %}
         <p>Playing as: guest!</p>
         {% endif %}
-    </div>
-</nav>
+      </div>
+    </nav>
 
-<div class="container">
-    <div class="left-col">
-        <h1>Choose <br> Your <br> Vibe</h1>
+    <div class="container">
+      <div class="left-col">
+        <h1>
+          Choose <br />
+          Your <br />
+          Vibe
+        </h1>
         <select id="songSelector">
-            <option value="../static/asset/sounds/music1.mp3">Song 1</option>
-            <option value="../static/asset/sounds/music2.mp3">Song 2</option>
-            <option value="../static/asset/sounds/music3.mp3">Song 3</option>
-            <option value="../static/asset/sounds/music4.mp3">Song 4</option>
-            <option value="../static/asset/sounds/music5.mp3">Song 5</option>
-            <!-- Add more options for additional songs -->
+          <option value="../static/asset/sounds/music1.mp3">Song 1</option>
+          <option value="../static/asset/sounds/music2.mp3">Song 2</option>
+          <option value="../static/asset/sounds/music3.mp3">Song 3</option>
+          <option value="../static/asset/sounds/music4.mp3">Song 4</option>
+          <option value="../static/asset/sounds/music5.mp3">Song 5</option>
+          <!-- Add more options for additional songs -->
         </select>
+      </div>
+
+      <div class="right-col">
+        <p>Click Here To Listen</p>
+        <img src="../static/asset/Play.png" id="icon" />
+      </div>
     </div>
 
-    <div class="right-col">
-      <p>Click Here To Listen</p>
-        <img src="../static/asset/Play.png" id="icon">
-    </div>
-</div>
+    <audio id="mysound"></audio>
 
-<audio id="mysound"> </audio>
-
-<script src="../static/js/modal.js"></script>
-<script src="../static/js/musicplayer.js"></script>
-
-</body>
+    <script src="../static/js/modal.js"></script>
+    <script src="../static/js/musicplayer.js"></script>
+  </body>
 </html>
