tryna add the nav bar, but the icons don't show properly

--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -18,11 +18,11 @@
             <button>
               <img
                 class="icon"
-                src="{{ url_for('static', filename='home_button.png') }}"
+                href="{{ url_for('static', filename='asset/home_button.png') }}"
               />
               <img
                 class="icon-hover"
-                src="{{ url_for('static', filename='home_button_hover.png') }}"
+                href="{{ url_for('static', filename='asset/home_button_hover.png') }}"
               />
             </button>
           </a>
@@ -31,12 +31,12 @@
           <button id="modal-btn">
             <img
               class="icon"
-              src="../static/asset/setting_button.png"
+              href="{{ url_for('static', filename='asset/setting_button.png') }}"
               alt="Setting"
             />
             <img
               class="icon-hover"
-              src="../static/asset/setting_button_hover.png"
+              href="{{ url_for('static', filename='asset/setting_button_hover.png') }}"
               alt="Setting Hover"
             />
           </button>
@@ -59,12 +59,12 @@
           <button>
             <img
               class="icon"
-              src="../static/asset/profile_button.png"
+              href="{{ url_for('static', filename='asset/profile_button.png') }}"
               alt="Profile"
             />
             <img
               class="icon-hover"
-              src="../static/asset/profile_button_hover.png"
+              href="{{ url_for('static', filename='asset/profile_button_hover.png') }}"
               alt="Profile Hover"
             />
           </button>
