--- a/app/templates/sayles.html
+++ b/app/templates/sayles.html
@@ -117,5 +117,6 @@
     </div>
     <script src="../static/js/modal.js"></script>
     <script src="../static/js/menu.js"></script>
+    <script src="../static/js/drag.js"></script>
   </body>
 </html>
