--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -18,11 +18,11 @@
             <button>
               <img
                 class="icon"
-                href="{{ url_for('static', filename='asset/home_button.png') }}"
+                src="{{ url_for('static', filename='asset/home_button.png') }}"
               />
               <img
                 class="icon-hover"
-                href="{{ url_for('static', filename='asset/home_button_hover.png') }}"
+                src="{{ url_for('static', filename='asset/home_button_hover.png') }}"
               />
             </button>
           </a>
@@ -31,12 +31,12 @@
           <button id="modal-btn">
             <img
               class="icon"
-              href="{{ url_for('static', filename='asset/setting_button.png') }}"
+              src="{{ url_for('static', filename='asset/setting_button.png') }}"
               alt="Setting"
             />
             <img
               class="icon-hover"
-              href="{{ url_for('static', filename='asset/setting_button_hover.png') }}"
+              src="{{ url_for('static', filename='asset/setting_button_hover.png') }}"
               alt="Setting Hover"
             />
           </button>
@@ -59,12 +59,12 @@
           <button>
             <img
               class="icon"
-              href="{{ url_for('static', filename='asset/profile_button.png') }}"
+              src="{{ url_for('static', filename='asset/profile_button.png') }}"
               alt="Profile"
             />
             <img
               class="icon-hover"
-              href="{{ url_for('static', filename='asset/profile_button_hover.png') }}"
+              src="{{ url_for('static', filename='asset/profile_button_hover.png') }}"
               alt="Profile Hover"
             />
           </button>
@@ -82,27 +82,45 @@
           {% endif %}
         </div>
       </nav>
+
       <div class="content">
         <div id="chatroom">
-          <h1>Chatroom</h1>
-          <div id="chat"></div>
-          <input
-            type="text"
-            id="message_input"
-            placeholder="Type your message..."
-          />
-          <button onclick="sendMessage()">Send</button>
+          <h1>Posting!</h1>
+
+          <p class="heading-class">Welcome to Public Post!</p>
+          <section class="create-post">
+            <header class="header">
+              <h1>Create post</h1>
+              <div class="cross-icon">
+                <div class="cross-icon-mark"></div>
+              </div>
+            </header>
+            <div class="post-header">
+              <div class="profile-pic"></div>
+              <div class="user-info">
+                <div class="full-name">GeeksforGeeks</div>
+              </div>
+            </div>
+            <div class="post-content">
+              <p id="chat">
+                <textarea
+                  name="post-desc"
+                  id="message_input"
+                  cols="30"
+                  rows="5"
+                  placeholder="What's on your mind? Type..."
+                ></textarea>
+              </p>
+              <div class="emoji-picker">
+                <emoji-picker class="light"></emoji-picker>
+                <i class="emoji" aria-label="Insert an emoji" role="img"></i>
+              </div>
+              <button class="post-btn" onclick="sendMessage()">Post!</button>
+            </div>
+          </section>
+
+          <p class="center-big" id="textContainer"></p>
         </div>
-
-        <p class="heading-class">Welcome to Room # <b id="roomNumber">?</b></p>
-
-        <p class="center-big">
-          <b class="red" id="text0" style="display: block"> ? </b>
-          <b class="red" id="text1" style="display: block"> ? </b>
-          <b class="red" id="text2" style="display: block"> ? </b>
-          <b class="red" id="text3" style="display: block"> ? </b>
-          <b class="red" id="text4" style="display: block"> ? </b>
-        </p>
 
         <p class="center-med">Players: <b id="playerNames">No One Here</b></p>
 
@@ -111,5 +129,8 @@
         </p>
       </div>
     </div>
+
+    <script src="/static/js/chatroom.js"></script>
+    <script src="/static/js/posting.js"></script>
   </body>
 </html>
