--- a/app/templates/sayles.html
+++ b/app/templates/sayles.html
@@ -114,6 +114,11 @@
           class="draggable"
         />
       </div>
+      <p class="JoinMed">
+        <button class="JoinButton" onclick="join_oneonone_chat();">JOIN A ROOM</button>
+      </p>
+
+  <script src="/static/js/chatroom.js"></script>
     </div>
     <script src="../static/js/modal.js"></script>
     <script src="../static/js/menu.js"></script>
